    * Introduced scope parameter to CacheEntry() - if you specify 'farm', it
      will cache into a common directory for all wikis in the same farm, if you
      specify 'wiki', it will use a cache directory per wiki and if you specify
      'item', it will use a cache directory per item (== per page).
      Creating a CacheEntry without explicit scope is DEPRECATED.

  New Features:

    * FeatureRequests/WikiEmailIntegration TODO:make some help page when stable
    * HTML parser (called "html") that allows you to use HTML on the page.
      Thanks to the trac team for the nice code.
    * You can have a common cache_dir for your farm (will save a bit space
      and cpu time as it shares some stuff).
      You need to set "cache_dir = '/some/farm/cachedir' in your farmconfig.

  Bugfixes:
    * on action "info" page, "revert" link will not be displayed for empty page
      revisions (but you just can delete the current page to get an empty rev.)
    * fix vanishing strike markup after gui editor usage
    * fix deletion of empty Interwiki links ([wiki:MoinMaster: mm entry page])
    * fix mod_python attachment upload bug (thanks to Nick Phillips)
    * fix show_version to show it in the same way as SystemInfo
    * allow "-" in usernames (fixes "Invalid user name" msg)


Version 1.5.current:
  Developer notes:
    * We switched to Mercurial SCM, see here for more infos:
      http://moinmoin.wikiwikiweb.de/MoinDev/MercurialGuide

  Bugfixes:
    * fix MonthCalendar macro for non-ASCII pagenames (thanks to Jonas Smedegaard)
    * remove 'search' and 'google' from bot user agent list and add some more
      specific terms
    * Fix the forgotten password email login URL and also properly encode the
      email body. Thanks to Robin Dunn for the patch.
    * Applied a patch by Matthew Gilbert for increased compatiblity with
      latest docutils.


Version 1.5.3:
  New Features:
    * Added CSS classes for TableOfContents macro.

  Bug Fixes: