@@ -14,7 +14,7 @@ from MoinMoin import config
 from MoinMoin.util.dataset import TupleDataset, Column
 from MoinMoin.widget.browser import DataBrowserWidget
 
-COLUMNS = 3
+COLUMNS = 4
 
 Dependencies = ['user'] # different users have different themes and different user prefs (text/gfx)
 
@@ -29,28 +29,20 @@ def execute(macro, args):
         data.columns.extend([
             Column('markup', label=_('Markup')),
             Column('image', label=_('Display'), align='center'),
-            Column('filename', label=_('Filename')),
             Column('', label=''),
         ])
     data.columns[-1].hidden = 1
 
     # iterate over smileys, in groups of size COLUMNS
-    smileys = config.smileys.items()
-    smileys.sort()
+    smileys = config.smileys
     for idx in range(0, len(smileys), COLUMNS):
         row = []
         for off in range(COLUMNS):
             if idx+off < len(smileys):
-                markup, smiley = smileys[idx+off]
-                img = fmt.smiley(markup)
-                row.extend([
-                    fmt.code(1) + fmt.text(markup) + fmt.code(0),
-                    img,
-                    fmt.code(1) + smiley[3] + fmt.code(0),
-                    '',
-                ])
+                markup = smileys[idx+off]
+                row.extend([fmt.code(1) + fmt.text(markup) + fmt.code(0), fmt.smiley(markup), '', ])
             else:
-                row.extend(['&nbsp;'] * 4)
+                row.extend(['&nbsp;'] * 3)
         data.addRow(tuple(row))
 
     # display table
